<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recipe_card" />
</android.support.constraint.ConstraintLayout>